refactor: update oracle configuration and remove example file

--- a/Oracle/.env.example
+++ b/Oracle/.env.example
@@ -7,6 +7,9 @@ ORACLE_PRIVATE_KEY=APrivateKey1...
 # REQUIRED: Aleo node URL (testnet or mainnet)
 ALEO_NODE_URL=https://api.explorer.aleo.org/v1
 
+# REQUIRED: Etherscan API key for fetching ETH supply
+ETHERSCAN_API_KEY=your_etherscan_api_key_here
+
 # OPTIONAL: How often to check markets (in seconds)
 CHECK_INTERVAL=300
 
