--- a/Oracle/.env.example
+++ b/Oracle/.env.example
@@ -11,6 +11,10 @@ ALEO_NODE_URL=https://api.explorer.aleo.org/v1
 ETHERSCAN_API_KEY=your_etherscan_api_key_here
 
 # PostgreSQL Configuration
+# Option 1: Connection String (Recommended for SSL/Channel Binding)
+# DATABASE_URL=postgresql://user:password@host:5432/oracle_db?sslmode=require&channel_binding=require
+
+# Option 2: Detailed Parameters
 PGHOST=localhost
 PGPORT=5432
 PGUSER=postgres
