fix: pg security

--- a/Oracle/.env.example
+++ b/Oracle/.env.example
@@ -20,6 +20,7 @@ PGPORT=5432
 PGUSER=postgres
 PGPASSWORD=your_password
 PGDATABASE=oracle_db
+PGSSL=true
 
 # OPTIONAL: How often to check markets (in seconds)
 CHECK_INTERVAL=300
